fix : signup functionality
